# polymarket-bot-summer

./: .env  .env.example  .gitignore  BLUEPRINT.xml  Cargo.toml  README.md
src/: cli.rs  clob_auth.rs  config.rs  database.rs  execution.rs  lib.rs  main.rs  markets.rs  onboarding.rs  spike_detection.rs  types.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
