[package]
name = "polymarket-bot-summer"
version = "2.4.0"
edition = "2021"
authors = ["vicentefelipechile (Aka SummerTYT)"]
description = "High-frequency trading bot for Polymarket using activity spike exploitation"
license = "MIT"

[dependencies]
# Core trading infrastructure
polymarket-hft = "0.0.5"

# Polymarket CLOB SDK for credential generation
polymarket-client-sdk = { version = "0.4.1", features = ["clob"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum & Blockchain
ethers = "2.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

# Mathematical operations
rust_decimal = "1.29"

# TUI Interface
ratatui = "0.29"
crossterm = "0.28"

# UX & Formatting
colored = "2.0"

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# HTTP Client for API requests
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
